adding 'the saga of harrison crabfeathers'

--- a/examples/speakeasy.conf
+++ b/examples/speakeasy.conf
@@ -1,5 +1,5 @@
 standards/after_youve_gone.mscz
-standards/aint_no_sunshine.mscz
+extra/aint_no_sunshine.mscz
 standards/all_blues.mscz
 standards/all_of_me.mscz
 standards/autumn_leaves.mscz
@@ -13,10 +13,11 @@ standards/equinox.mscz
 standards/fly_me_to_the_moon.mscz
 standards/footprints.mscz
 standards/in_a_sentimental_mood.mscz
-standards/isnt_she_lovely.mscz
+extra/isnt_she_lovely.mscz
 extra/mas_que_nada.mscz
 standards/moanin.mscz
 standards/saint_thomas.mscz
 standards/song_for_my_father.mscz
 standards/spain.mscz
+standards/the_saga_of_harrison_crabfeathers.mscz
 standards/there_will_never_be_another_you.mscz
