--- a/examples/speakeasy.conf
+++ b/examples/speakeasy.conf
@@ -9,6 +9,7 @@ standards/brazil.mscz
 standards/c_jam_blues.mscz
 standards/cantaloupe_island.mscz
 standards/caravan.mscz
+standards/corcovado.mscz
 standards/dark_eyes.mscz
 standards/equinox.mscz
 standards/fly_me_to_the_moon.mscz
