standards: adding 'sunny'

--- a/examples/speakeasy.conf
+++ b/examples/speakeasy.conf
@@ -21,5 +21,6 @@ standards/moanin.mscz
 standards/saint_thomas.mscz
 standards/song_for_my_father.mscz
 standards/spain.mscz
+standards/sunny.mscz
 standards/the_saga_of_harrison_crabfeathers.mscz
 standards/there_will_never_be_another_you.mscz
