extra: adding 'cantina band'

--- a/examples/speakeasy.conf
+++ b/examples/speakeasy.conf
@@ -8,6 +8,7 @@ standards/blue_bossa.mscz
 standards/brazil.mscz
 standards/c_jam_blues.mscz
 standards/cantaloupe_island.mscz
+extra/cantina_band.mscz
 standards/caravan.mscz
 standards/corcovado.mscz
 standards/dark_eyes.mscz
