standards: adding 'take five'

--- a/examples/speakeasy.conf
+++ b/examples/speakeasy.conf
@@ -23,5 +23,6 @@ standards/saint_thomas.mscz
 standards/song_for_my_father.mscz
 standards/spain.mscz
 standards/sunny.mscz
+standards/take_five.mscz
 standards/the_saga_of_harrison_crabfeathers.mscz
 standards/there_will_never_be_another_you.mscz
